--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ websockets == 13.1
 websocket-client == 1.8.0
 requests == 2.32.3
 mysql-connector-python == 9.1.0
+pyqt5~=5.15.4
+PyQtChart
+pyqt5-tools
+loguru
+pydantic
+peewee
+pyinstaller
+psutil
