--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,7 @@
-127.0.0.1
+ip=127.0.0.1
+port=5000
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=filesharesystem
